--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
-UI/__pycache__/Ui_lighting_control.cpython-36.pyc
+UI/Version 1/__pycache__
+UI/__pycache__
 .vscode/launch.json
+UI/Version 2/__pycache__
