--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
+UI/Version 2/__pycache__/Ui_lighting_control.cpython-36.pyc
 UI/Version 1/__pycache__
 UI/__pycache__
 .vscode/launch.json
 UI/Version 2/__pycache__
+UI/Version 2/__pycache__/Ui_lighting_control.cpython-36.pyc
