Working Version (So Far?)

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ UI/__pycache__
 .vscode/launch.json
 UI/Version 2/__pycache__
 UI/Version 2/__pycache__/Ui_lighting_control.cpython-36.pyc
+UI/Version 2/__pycache__/Ui_lighting_control.cpython-36.pyc
